Added the Star Rating @Input and @Output Code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
     "removeComments": false,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "types" : [
+    "core-js"
+  ],
+"exclude": [
+"node_modules"
+]
 }
